--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "learning node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js",
+    "test": "mocha test/**"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/Matthieu-ui/it122-S22/issues"
   },
-  "homepage": "https://github.com/Matthieu-ui/it122-S22#readme"
+  "homepage": "https://github.com/Matthieu-ui/it122-S22#readme",
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "eslint": "^8.14.0",
+    "mocha": "^9.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
