--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mocha": "^9.2.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "ejs": "^3.1.7",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.2"
   }
 }
