--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "learning node",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "start-watch": "nodemon src/index.js",
     "lint": "eslint **/*.js",
     "test": "mocha test/**"
   },
@@ -25,7 +27,8 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^8.14.0",
-    "mocha": "^9.2.2"
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.16"
   },
   "dependencies": {
     "ejs": "^3.1.7",
