--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^8.14.0",
+    "eslint-plugin-jest": "^26.5.3",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.16"
   },
